fix: fix nav on mobile

--- a/src/drive/styles/nav.styl
+++ b/src/drive/styles/nav.styl
@@ -36,6 +36,13 @@
 @media (max-width: (1023/basefont)rem)
 
     [class^='coz-nav']
+        // temporary fix
+        [class^='coz-nav-link']
+            min-width auto
+            padding 0
+            flex 0 0 2.5em
+        // temporary fix
+
         [class^='coz-spinner']:before
             width .5rem
             height .5rem
